--- a/src/entities/components/skeletons/Page/Page.module.scss
+++ b/src/entities/components/skeletons/Page/Page.module.scss
@@ -1,13 +1,5 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 32px;
-
-  @media (width < 1280px) {
-    gap: 16px;
-  }
-
-  @media (width < 980px) {
-    gap: 8px;
-  }
+  gap: 8px;
 }
