--- a/src/widgets/layouts/MainLayout/ui/MainLayout.module.scss
+++ b/src/widgets/layouts/MainLayout/ui/MainLayout.module.scss
@@ -19,6 +19,8 @@
   background: var(--white-100);
   width: var(--nav-bar-width);
   border-right: var(--border-width) solid var(--dark-20);
+  height: 100%;
+  overflow: auto;
 
   @media (width < 1280px) {
     display: none;
